[tool.poetry]
name = "fastapi-redis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_redis"}]

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "2.0.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
requests = "^2.32.3"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
